--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,3 +3,87 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif; }
+
+body {
+  background-color: #e8e8fd; }
+
+a {
+  text-decoration: none; }
+
+ul {
+  list-style: none; }
+
+.header, .header .header__profile, .header .header__menu .header__item, .header .header__logout {
+  display: flex; }
+
+.header .header__profile, .header .header__menu .header__item, .header .header__logout {
+  align-items: center; }
+
+.container {
+  display: flex;
+  padding: 1rem 0 0 3rem; }
+
+.box-bg {
+  background-color: #ee4d38;
+  border-radius: 30px;
+  height: 600px;
+  position: relative;
+  width: 150px; }
+
+.box-content {
+  background-color: #f8f8ff;
+  border-radius: 30px;
+  left: 61px;
+  position: absolute;
+  display: flex;
+  top: 20px;
+  width: max-content;
+  height: 90%;
+  padding: 1.375rem;
+  box-shadow: -12px 17px 39px -5px #000; }
+
+.header {
+  flex-direction: column;
+  justify-content: space-between; }
+  .header .header__profile {
+    gap: 0.625rem;
+    padding: 1rem; }
+    .header .header__profile .header__person {
+      color: #1a194d;
+      font-size: 1rem; }
+    .header .header__profile .header__user {
+      color: #62618f; }
+  .header .header__link {
+    color: #62618f;
+    font-size: 0.875rem; }
+  .header .header__menu {
+    margin-top: 0rem; }
+    .header .header__menu .header__item {
+      gap: 0.625rem;
+      margin-top: 1.125rem;
+      padding: 0.375rem 1rem; }
+      .header .header__menu .header__item .header__link {
+        position: relative;
+        transition: all 0.5s; }
+        .header .header__menu .header__item .header__link::before {
+          bottom: 0;
+          content: "";
+          display: block;
+          height: 1px;
+          left: -5px;
+          position: absolute;
+          transition: ease-in-out all 0.5s;
+          width: 0; }
+        .header .header__menu .header__item .header__link:hover::before {
+          background-color: #1a194d;
+          width: 120%; }
+        .header .header__menu .header__item .header__link:hover {
+          color: #1a194d; }
+    .header .header__menu .--active {
+      border-left: 3px solid #ee4d38; }
+      .header .header__menu .--active .header__link {
+        color: #1a194d; }
+  .header .header__logout {
+    gap: 0.625rem; }
+    .header .header__logout .header__link {
+      font-weight: 700; }
