--- a/assets/scss/layout/_containers.scss
+++ b/assets/scss/layout/_containers.scss
@@ -1,26 +1,19 @@
 .container {
-  display: flex;
-  // justify-content: center;
   padding: 1rem 0 0 3rem;
 }
 
 .box-bg {
   background-color: $emphasis-bg-color;
-  border-radius: 30px;
+  border-radius: to-rem(30);
   height: 600px;
   position: relative;
   width: 150px;
 }
 
 .box-content {
-  background-color: #f8f8ff;
-  border-radius: 30px;
+  display: flex;
+  min-height: 90%;
   left: 61px;
   position: absolute;
-  display: flex;
   top: 20px;
-  width: max-content;
-  height: 90%;
-  padding: to-rem(22);
-  box-shadow: -12px 17px 39px -5px #000;
 }
