--- a/assets/scss/common/_variables.scss
+++ b/assets/scss/common/_variables.scss
@@ -1,5 +1,6 @@
 $primary-text-color: #1a194d;
 $secondary-text-color: #62618f;
 $emphasis-text-color: #ee6338;
+$secondary-bg-color: #f3f3f3;
 $emphasis-bg-color: #ee4d38;
 $border-color: #cbcbd9;
